add first interaction timestamp

--- a/dataset/team1/run1/run.yaml
+++ b/dataset/team1/run1/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.1.0/24'
 timeline:
   start: 2025-03-28T08:30:00
   suricata_start: 2025-03-28 06:53:27
+  first_con_not_win_host: 2025-03-28 08:35:52
   it_flag: 2025-03-28T10:55:18
   ot_flag: None
   reset: 2025-03-28T14:28:47
