--- a/dataset/team2/run1/run.yaml
+++ b/dataset/team2/run1/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.2.0/24'
 timeline:
   start: 2025-03-28T08:30:00
   suricata_start: 2025-03-28 06:54:00
+  first_con_not_win_host: 2025-03-28 08:38:07
   it_flag: 2025-03-28T10:19:49
   ot_flag: 2025-03-28T12:12:08
   reset: 2025-03-28T14:11:05
