--- a/dataset/team3/run3/run.yaml
+++ b/dataset/team3/run3/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.3.0/24'
 timeline:
   start: None
   suricata_start: 2025-03-28 15:40:57
+  first_con_not_win_host: 2025-03-28 15:53:14
   it_flag: 2025-03-28T16:15:31
   ot_flag: None
   reset: None
