--- a/dataset/team6/run2/run.yaml
+++ b/dataset/team6/run2/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.6.0/24'
 timeline:
   start: None
   suricata_start: 2025-03-28 14:41:59
+  first_con_not_win_host: 2025-03-28 14:58:36
   it_flag: 2025-03-28T15:19:12
   ot_flag: None
   reset: None
