--- a/dataset/team10/run1/run.yaml
+++ b/dataset/team10/run1/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.10.0/24'
 timeline:
   start: 2025-03-28T08:30:00
   suricata_start: 2025-03-28 06:53:39
+  first_con_not_win_host: 2025-03-28 08:50:13
   it_flag: None
   ot_flag: 2025-03-28T16:28:24
   reset: None
