--- a/dataset/team12/run1/run.yaml
+++ b/dataset/team12/run1/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.12.0/24'
 timeline:
   start: 2025-03-28T08:30:00
   suricata_start: 2025-03-28 06:54:03
+  first_con_not_win_host: 2025-03-28 08:35:07
   it_flag: None
   ot_flag: None
   reset: 2025-03-28T14:57:03
