--- a/dataset/team12/run2/run.yaml
+++ b/dataset/team12/run2/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.12.0/24'
 timeline:
   start: None
   suricata_start: 2025-03-28 15:09:07
+  first_con_not_win_host: 2025-03-28 15:28:25
   it_flag: None
   ot_flag: None
   reset: None
