--- a/dataset/team4/run1/run.yaml
+++ b/dataset/team4/run1/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.4.0/24'
 timeline:
   start: 2025-03-28T08:30:00
   suricata_start: 2025-03-28 06:53:26
+  first_con_not_win_host: 2025-03-28 08:40:49
   it_flag: 2025-03-28T11:31:04
   ot_flag: None
   reset: 2025-03-28T14:37:54
