--- a/dataset/team4/run2/run.yaml
+++ b/dataset/team4/run2/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.4.0/24'
 timeline:
   start: None
   suricata_start: 2025-03-28 15:08:53
+  first_con_not_win_host: 2025-03-28 15:09:07
   it_flag: 2025-03-28T15:51:57
   ot_flag: None
   reset: None
