--- a/dataset/team7/run1/run.yaml
+++ b/dataset/team7/run1/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.7.0/24'
 timeline:
   start: 2025-03-28T08:30:00
   suricata_start: 2025-03-28 06:53:53
+  first_con_not_win_host: 2025-03-28 08:33:16
   it_flag: 2025-03-28T13:43:32
   ot_flag: None
   reset: 2025-03-28T14:12:41
