--- a/dataset/team7/run2/run.yaml
+++ b/dataset/team7/run2/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.7.0/24'
 timeline:
   start: None
   suricata_start: 2025-03-28 14:41:48
+  first_con_not_win_host: 2025-03-28 14:59:55
   it_flag: 2025-03-28T15:18:49
   ot_flag: None
   reset: 2025-03-28T15:24:28
