--- a/dataset/team8/run1/run.yaml
+++ b/dataset/team8/run1/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.8.0/24'
 timeline:
   start: 2025-03-28T08:30:00
   suricata_start: 2025-03-28 06:53:28
+  first_con_not_win_host: 2025-03-28 08:58:46
   it_flag: None
   ot_flag: None
   reset: 2025-03-28T13:50:48
