--- a/dataset/team8/run2/run.yaml
+++ b/dataset/team8/run2/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.8.0/24'
 timeline:
   start: None
   suricata_start: 2025-03-28 14:06:34
+  first_con_not_win_host: 2025-03-28 14:08:40
   it_flag: None
   ot_flag: None
   reset: 2025-03-28T14:58:07
