--- a/dataset/team9/run2/run.yaml
+++ b/dataset/team9/run2/run.yaml
@@ -5,6 +5,7 @@ team_subnet: '10.0.9.0/24'
 timeline:
   start: None
   suricata_start: 2025-03-28 14:06:35
+  first_con_not_win_host: 2025-03-28 14:07:59
   it_flag: 2025-03-28T14:44:16
   ot_flag: None
   reset: None
