--- a/dataset/team1/run2/run.yaml
+++ b/dataset/team1/run2/run.yaml
@@ -11,3 +11,11 @@ timeline:
   reset: None
   writeup: 2025-03-28T15:35:00
   host_logs: None
+
+killchain:
+  - AV01
+  - AV03
+  - AV07
+  - AV15
+  - AV20
+  - AV21
