--- a/dataset/team7/run3/run.yaml
+++ b/dataset/team7/run3/run.yaml
@@ -11,3 +11,13 @@ timeline:
   reset: None
   writeup: 2025-03-28T16:14:00
   host_logs: None
+
+killchain:
+  - AV01
+  - AV03
+  - AV06
+  - AV09
+  - AV13
+  - UAV01
+  - AV20
+  - AV21
