--- a/dataset/team9/run1/run.yaml
+++ b/dataset/team9/run1/run.yaml
@@ -11,3 +11,13 @@ timeline:
   reset: 2025-03-28T13:50:29
   writeup: 2025-03-28T10:57:00
   host_logs: 2025-03-28T13:50:00
+
+killchain:
+  - AV01
+  - AV03
+  - AV06
+  - AV09
+  - AV13
+  - UAV01
+  - AV20
+  - AV21
